<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="significantgravitas.toran.armcompanion.DressUpFragment">


    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="551dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/female_head" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:columnCount="2"
            android:rowCount="2">


            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_rowWeight="1">

                <ImageButton
                    android:id="@+id/button_x18"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/heart_ico">

                </ImageButton>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="false"
                    android:text="@string/title_hats"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="18sp">

                </TextView>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_rowWeight="1">

                <ImageButton
                    android:id="@+id/button_1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/heart_ico">

                </ImageButton>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="false"
                    android:text="@string/title_jewelry"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="18sp">

                </TextView>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_rowWeight="1">

                <ImageButton
                    android:id="@+id/button_2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/heart_ico">

                </ImageButton>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="false"
                    android:text="@string/title_glasses"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="18sp">

                </TextView>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_rowWeight="1">

                <ImageButton
                    android:id="@+id/button_4"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/heart_ico">

                </ImageButton>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="false"
                    android:text="@string/title_headscarfs"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="18sp">

                </TextView>
            </FrameLayout>

        </GridLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>